# coupled_channels_scattering

./: CMakeLists.txt  out  out1  qdel.sh  qdel1.sh
analysis_coupleD/: .energy_eig_cosh_exp.swp  GEVP_order  GEVP_order_DDstar  boots_2pt  boots_corr_TP0  energy_fit_1fr_2pt  energy_fit_1fr_corr  energy_fit_1fr_eig  meff_2pt  out  outDstarDstar_DDstar  plot_corr  plot_corr_compare  plot_em  plot_em_diag  plot_em_seperate  signal_compa
analysis_coupleD/analysis/: analyze_fcts.py  bootstrap.py  corr_matrix.py  findroot.py  fit.py  input_output.py  plot.py  zeta_func.py
analysis_coupleD/analysis/copy/: corr_matrix.py  corr_matrix_v1.py  corr_matrix_v2.py  fit.py  fit1.py
analysis_coupleD/analysis/tests/: fit.py
analysis_coupleD/rebuild_corr/: combine_files.py  combine_files.py1  rebuild_files_corr
include/: Contrac_SiSiSiSi_SoSoSoSo.h  Contrac_SiSiSoSo_SoSi.h  Contrac_SiSiSoSo_SoSoSiSi.h  Contrac_SiSo_SoSoSiSi.h  Contrac_SoSi_SiSiSoSo.h  Contrac_SoSoSiSi_SiSiSoSo.h  Contrac_SoSoSiSi_SiSo.h  Contrac_twopoint.h  GlobalData.h  MesonFunctions.h  Momentum_lookup.h  ReadWrite.h
main_dir/: Contrac_SiSiSiSi_SoSoSoSo.d  Contrac_twopoint.d  GlobalData.d  LapHs.cpp  LapHs.d  LapHs_halfdone.cpp  LapHsfirst.cpp  Makefile  MesonFunctions.d  Momentum_lookup.d  ReadWrite.d  io_utils.d
modules/: ._Contrac_SiSiSoSo_SoSi.cpp  Contrac_SiSiSiSi_SoSoSoSo.cpp  Contrac_SiSiSoSo_SoSi.cpp  Contrac_SiSiSoSo_SoSoSiSi.cpp  Contrac_SiSo_SoSoSiSi.cpp  Contrac_SoSi_SiSiSoSo.cpp  Contrac_SoSoSiSi_SiSiSoSo.cpp  Contrac_SoSoSiSi_SiSo.cpp  Contrac_twopoint.cpp  GlobalData.cpp  MesonFunctions.cpp  Momentum_lookup.cpp  ReadWrite.cpp
