cmake_minimum_required(VERSION 3.7)
project(coupled_4channel)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    include/._Contrac_SiSiSiSi_SoSoSoSo.h
    include/._Contrac_SiSiSoSo_SoSi.h
    include/._Contrac_SiSiSoSo_SoSoSiSi.h
    include/._Contrac_SiSo_SoSoSiSi.h
    include/._Contrac_SoSi_SiSiSoSo.h
    include/._Contrac_SoSoSiSi_SiSiSoSo.h
    include/._Contrac_SoSoSiSi_SiSo.h
    include/._Contrac_twopoint.h
    include/._GlobalData.h
    include/._io_utils.h
    include/._MesonFunctions.h
    include/._Momentum_lookup.h
    include/._propagator_io.h
    include/._quark.h
    include/._ReadWrite.h
    include/Contrac_SiSiSiSi_SoSoSoSo.h
    include/Contrac_SiSiSoSo_SoSi.h
    include/Contrac_SiSiSoSo_SoSoSiSi.h
    include/Contrac_SiSo_SoSoSiSi.h
    include/Contrac_SoSi_SiSiSoSo.h
    include/Contrac_SoSoSiSi_SiSiSoSo.h
    include/Contrac_SoSoSiSi_SiSo.h
    include/Contrac_twopoint.h
    include/GlobalData.h
    include/io_utils.h
    include/MesonFunctions.h
    include/Momentum_lookup.h
    include/propagator_io.h
    include/quark.h
    include/ReadWrite.h
    main/._LapHs.cpp
    main/LapHs.cpp
    main/LapHs_halfdone.cpp
    main/LapHsfirst.cpp
    modules/._Contrac_SiSiSiSi_SoSoSoSo.cpp
    modules/._Contrac_SiSiSoSo_SoSi.cpp
    modules/._Contrac_SiSiSoSo_SoSoSiSi.cpp
    modules/._Contrac_SiSo_SoSoSiSi.cpp
    modules/._Contrac_SoSi_SiSiSoSo.cpp
    modules/._Contrac_SoSoSiSi_SiSiSoSo.cpp
    modules/._Contrac_SoSoSiSi_SiSo.cpp
    modules/._Contrac_twopoint.cpp
    modules/._GlobalData.cpp
    modules/._io_utils.cpp
    modules/._MesonFunctions.cpp
    modules/._Momentum_lookup.cpp
    modules/._propagator_io.cpp
    modules/._ReadWrite.cpp
    modules/Contrac_SiSiSiSi_SoSoSoSo.cpp
    modules/Contrac_SiSiSoSo_SoSi.cpp
    modules/Contrac_SiSiSoSo_SoSoSiSi.cpp
    modules/Contrac_SiSo_SoSoSiSi.cpp
    modules/Contrac_SoSi_SiSiSoSo.cpp
    modules/Contrac_SoSoSiSi_SiSiSoSo.cpp
    modules/Contrac_SoSoSiSi_SiSo.cpp
    modules/Contrac_twopoint.cpp
    modules/GlobalData.cpp
    modules/io_utils.cpp
    modules/MesonFunctions.cpp
    modules/Momentum_lookup.cpp
    modules/propagator_io.cpp
    modules/ReadWrite.cpp)

add_executable(coupled_4channel ${SOURCE_FILES})